services/models/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-api
  template:
    metadata:
      labels:
        app: model-api
    spec:
      containers:
      - name: model-api
        image: kind-registry:5000/model-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "500m"
            memory: "4Gi"
        volumeMounts:
        - name: llm-shared-volume
          mountPath: /mnt/llm-shared-volume

      volumes:
      - name: llm-shared-volume        
        hostPath:
          path: /mnt/models/data
          type: DirectoryOrCreate
