services/models/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-api-svc
spec:
  type: ClusterIP
  selector:
    app: model-api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
