services/models/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-api-ingress
  namespace: models
  annotations:
    kubernetes.io/ingress.class: nginx
    # setting 2 minute timeouts for the model-api
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/v1/models/
        pathType: ImplementationSpecific
        backend:
          service:
            name: model-api-svc
            port:
              number: 8000
